# care

./: .clang-format  .clangd  .cspell.json  .gitattributes  .gitignore  .gitmodules  CARE.code-workspace  CONTRIBUTING.md  DEMO_INFO.txt  Doxyfile  GUIDE_ESPHome_HASSio_UART.md  LICENSE  MIGRATION.md  PROJECT_AUDIT.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SECURITY.md  compile_commands.json  habr_article.md  pyrightconfig.json
.cursor/: mcp.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
ESPHome/: LD2450_with_native_component.yaml  Plotly_Graph_Native_Component.txt  README.md  secrets.yaml.example
case_stl/: Box_fixed.stl  Lid(1).stl  Lid(2).stl  Lid.stl  README.md
docs/: ARCHITECTURE.md  ARCHITECTURE_TARGET.md  CAN_ID_REFERENCE.md  CAN_MESSAGES.md  CODE_DOCUMENTATION_GUIDE.md  CONTROLLER_RADAR_SETUP.md  DEPLOYMENT.md  DOCUMENTATION_STATUS.md  PROJECT_AUDIT.md  PROJECT_STRUCTURE.md  can_transceiver_requirements.md  care_opportunities_analysis.md  cloned_repos_analysis.md  ld2450_research_notes.md  platform_comparison.md
docs/HLK-LD2450LD Report Data Analysis Reference Code/2450/: 2450.txt
docs/datasheet/application software/HLK-LD2450_TOOL_English/: Radar_Config.ini
docs/md/: CAN_PROTOCOL_SPECIFICATION.md  DEMO_GUIDE.md  DEMO_LAUNCH.md  DEVELOPMENT.md  ENHANCED_DEMO.md  FINAL_CARE_ARCHITECTURE.md  FINAL_TF_FIX_REPORT.md  GO.md  HYBRID_SETUP.md  IDE_SETUP.md  INSTALL.md  INSTALL_ROS2.md  LAUNCH_NODEJS.md  NODEJS_DEMO.md  NODEJS_TEST.md  QUICK_START.md  README.md  RUN_NODEJS.md  RVIZ_CONFIG.md  SESSION_SUMMARY.md  SETUP.md  START_CARE.md  START_NOW.md  SYSTEM_ANALYSIS_REPORT.md  SYSTEM_IMPLEMENTATION_REPORT.md  TROUBLESHOOTING.md  WEB_ARCHITECTURE.md  architecture_can_ros.md  can_transceiver_requirements.md  esp32_high_performance_guide.md  platform_comparison.md  stm32_platform_guide.md
esp32/: platformio.ini
esp32/include/: care_radar.h
esp32/src/: main.cpp
infrastructure/configs/: requirements.txt
infrastructure/docker/: docker-compose.yml  env.example
infrastructure/docker/nodejs/: Dockerfile
infrastructure/docker/ros2/: Dockerfile
infrastructure/scripts/: configure_sensor.sh  debug_care.sh  final_test_care.sh  install_ros2_jazzy.sh  launch_care_demo.sh  monitor_care.sh  start.sh  test_fixed_care.sh  test_mock_can.sh
ros2/care_ld2450_driver/launch/: care.launch.py
ros2/care_ld2450_driver/msg/: RadarTarget.msg  RadarTargets.msg  SafetyStatus.msg
ros2/care_ld2450_driver/src/: ld2450_driver_node.cpp
ros2/care_ld2450_driver/srv/: SetSafetyZone.srv
rpi_pico/: platformio.ini
rpi_pico/include/: care_radar.h
rpi_pico/src/: main.cpp
scripts/: README.md  connect_radar.sh  debug_com_port.py  install_ros2_dev.sh  launch_care_demo.sh  launch_care_nodejs.sh  launch_nodejs_demo.sh  monitor_care.sh  radar.py  ros2_build.sh  ros2_test.sh  start.sh  uart_engineering_setup.sh  verify_ros2_imports.py
services/nodejs/: .eslintrc.json  Dockerfile  README.md  docker-compose.yml  env.example  eslint.config.mjs  index.js  integrated-demo.js  jsdoc.json  package-lock.json  package-mock.json  package.json
services/nodejs/care-api/: index.js
services/nodejs/care-api/public/: admin.html  index.html
services/nodejs/care-can-bridge/: index.js
services/nodejs/care-dashboard/: index.js
services/nodejs/care-dashboard/public/: index.html
services/nodejs/config/: sensor-config.js
services/nodejs/mock-can/: index.js
services/nodejs/stm32-config/: index.js  package.json
services/ros2/: Dockerfile  README.md  pyrightconfig.json
services/ros2/care_can_bridge_node/: CMakeLists.txt  package.xml
services/ros2/care_can_bridge_node/scripts/: can_bridge.py
services/ros2/care_can_interface_node/: CMakeLists.txt  package.xml
services/ros2/care_can_interface_node/src/: care_can_interface_node.cpp
services/ros2/care_common/: CMakeLists.txt  package.xml
services/ros2/care_common/msg/: DeviceInfo.msg  RadarTarget.msg  RadarTargets.msg  SafetyCommand.msg  SafetyZone.msg  SystemStatus.msg
services/ros2/care_common/srv/: ConfigController.srv  EmergencyStop.srv  GetSystemStatus.srv  SetSafetyZone.srv
services/ros2/care_demo_node/: CMakeLists.txt  package.xml
services/ros2/care_demo_node/config/: care_demo.rviz
services/ros2/care_demo_node/launch/: care_demo.launch.py  care_radar.launch.py
services/ros2/care_demo_node/scripts/: demo_node.py
services/ros2/care_demo_node/src/: care_demo_node.cpp
services/ros2/care_launch/: CMakeLists.txt  package.xml
services/ros2/care_launch/launch/: demo.launch.py  development_uart.launch.py  full_system.launch.py  production_can.launch.py
services/ros2/care_ld2450_driver/: CMakeLists.txt  package.xml
services/ros2/care_ld2450_driver/config/: care_radar.yaml
services/ros2/care_radar_publisher/: CMakeLists.txt  package.xml
services/ros2/care_radar_publisher/config/: care_radar.rviz
services/ros2/care_radar_publisher/launch/: care_radar.launch.py
services/ros2/care_safety_controller_node/: CMakeLists.txt  package.xml
services/ros2/care_safety_controller_node/scripts/: safety_node.py
services/ros2/care_safety_controller_node/src/: care_safety_controller_node.cpp
tests/: README.md  pytest.ini
tools/: debug_web_interface.html  start.sh
