<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>care_can_interface_node</name>
  <version>2.0.0</version>
  <description>C.A.R.E. CAN Interface Node - Pure CAN to ROS2 protocol bridge</description>
  
  <maintainer email="care@project.com">C.A.R.E. Team</maintainer>
  <license>MIT</license>
  
  <author email="care@project.com">C.A.R.E. Integration Team</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>care_common</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
