<?xml version="1.0"?>
<package format="3">
  <name>care_demo_node</name>
  <version>0.1.0</version>
  <description>C.A.R.E. Demo Node (RViz + config)</description>
  <maintainer email="care@project.com">CARE Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++ dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>care_common</depend>

  <!-- Python dependencies -->
  <exec_depend>rclpy</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

</package>

