<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>care_safety_controller_node</name>
  <version>2.0.0</version>
  <description>C.A.R.E. Safety Controller - Centralized safety decision making system</description>
  
  <maintainer email="care@project.com">C.A.R.E. Team</maintainer>
  <license>MIT</license>
  
  <author email="care@project.com">C.A.R.E. Safety Team</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>care_common</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
