<?xml version="1.0"?>
<package format="3">
  <name>care_safety_controller_node</name>
  <version>0.1.0</version>
  <description>C.A.R.E. Safety Controller Node</description>
  <maintainer email="team@care">CARE Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
